--- a/README
+++ b/README
@@ -24,3 +24,6 @@ Scroll down:
 
 == Print Index ==
 Pass the -ix flag to dmenu to enable index printing.
+
+== numbers ==
+Adds text which displays the number of matched and total items in the top right corner of dmenu.
